# saphbot

./: .gitignore  .gitmodules  .langname_categories_raw.py.swp  .pre-commit-config.yaml  .ruff.toml  Cargo.toml  LICENSE  add_missing_reconstructed.py  data_utils.py  disable babel cat.py  disable cat.py  disable_babel_cat.py  langcat_redundant_pagename.py  langname_categories_raw.py  languages_utils.py  pre-commit  pyproject.toml  raw_category.py  redundant_head_parameter.py  replace_l_alt.py  requirements.txt  scrape babel messages.py  topic_categories_raw.py  update_category.py  user-config.py
lib/: __init__.py  concurrent.py  data_utils.py  dump_grep.py  misc.py
lists/: babel_cat_ignore.txt
mwdump/: Cargo.toml
mwdump/src/search/: mod.rs  pages_meta_current.rs
oneshots/: convert_legacy_etymon.py  ko_usex.py  niv_ipa_conversion.py  rm_parser_function.py  update_babel_syntax.py  wp_to_pedia.py
saphbot/: __main__.py  ai_images.py  core.py  disable_babel_cat.py  langname_categories_raw.py
saphbot/lib/: __init__.py  data_utils.py  misc.py
saphbot/oneshots/: niv_ipa_conversion.py
saphbot/scripts/: add_missing_reconstructed.py  ai_images.py  disable_babel_cat.py  langcat_redundant_pagename.py  langname_categories_raw.py  redundant_head_parameter.py  replace_l_alt.py  topic_categories_raw.py  update_category.py
src/: add_missing_reconstructed.py  disable_babel_cat.py  fetch.rs  main.rs  replace_l_alt.py  topic_categories_raw.py
src/lib/: multiprocessor.py
src/lists/: babel_cat_ignore.txt
src/oneshots/: wp_to_pedia.py
