[project]
name = "saphbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cachetools>=6.2.6",
    "colorlog>=6.10.1",
    "diskcache>=5.6.3",
    "inquirerpy>=0.3.4",
    "lxml>=6.0.2",
    "mwparserfromhell>=0.7.2",
    "pre-commit>=4.3.0",
    "pywikibot>=11.1.0",
    "tqdm>=4.67.3",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.ruff]
exclude = [
  ".git",
  "user-config.py",
  ".venv",
]

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
