[package]
name = "mwdump"
authors = ["Choi Madeleine <gankiann.niu@gmail.com>"]
description = "Tool for interacting with MediaWiki database dumps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bzip2 = "0.6.1"
clap = { version = "4.5.49", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.0"
quick-xml = "0.38.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "0.2.0-alpha.6"
